<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/bottom_nav_home" />
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_menu_calendar"
        android:title="@string/bottom_nav_schedule" />
    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/bottom_nav_add" />
    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_menu_notification"
        android:title="@string/bottom_nav_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_menu_person"
        android:title="@string/bottom_nav_profile" />
</menu>