<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F7FB">

    <!-- ===== 상단 탭 ===== -->
    <LinearLayout
        android:id="@+id/topTabs"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@android:color/white"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tabSchoolbus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="스쿨버스"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#D1D2D5"
            android:background="@drawable/bg_tab_off" />

        <TextView
            android:id="@+id/tabCampus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="캠퍼스안내"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#D1D2D5"
            android:background="@drawable/bg_tab_off" />

        <TextView
            android:id="@+id/tabOfficial"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="학교공식"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#012460"
            android:background="@drawable/bg_tab_on" />
    </LinearLayout>

    <!-- ===== 내부 스크롤 영역 ===== -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topTabs"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#012460"
                android:layout_marginBottom="18dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="18dp"
                    android:paddingVertical="12dp">

                    <!-- 이미지 -->
                    <ImageView
                        android:id="@+id/sutalk_img"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/round_image"
                        android:src="@drawable/sutalk" />

                    <!-- 오른쪽 정보 -->
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="14dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name_1"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="#232323"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_intro_1"
                            android:textSize="13sp"
                            android:textColor="#656565"
                            android:layout_marginTop="6dp"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="18dp"
                    android:paddingVertical="12dp">

                    <!-- 이미지 -->
                    <ImageView
                        android:id="@+id/syulib_img"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/round_image"

                        android:src="@drawable/syulib" />

                    <!-- 오른쪽 정보 -->
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="14dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name_2"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="#232323"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_intro_2"
                            android:textSize="13sp"
                            android:textColor="#656565"
                            android:layout_marginTop="6dp"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="18dp"
                    android:paddingVertical="12dp">

                    <!-- 이미지 -->
                    <ImageView
                        android:id="@+id/lms_img"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/round_image"

                        android:src="@drawable/lms" />

                    <!-- 오른쪽 정보 -->
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="14dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name_3"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="#232323"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_intro_3"
                            android:textSize="13sp"
                            android:textColor="#656565"
                            android:layout_marginTop="6dp"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#012460"
                android:layout_marginBottom="18dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="18dp"
                    android:paddingVertical="12dp">

                    <!-- 이미지 -->
                    <ImageView
                        android:id="@+id/syu_img"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/round_image"
                        android:src="@drawable/syu"/>

                    <!-- 오른쪽 정보 -->
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="14dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/web_name_1"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="#232323"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/web_intro_1"
                            android:textSize="13sp"
                            android:textColor="#656565"
                            android:layout_marginTop="6dp"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="18dp"
                    android:paddingVertical="12dp">

                    <!-- 이미지 -->
                    <ImageView
                        android:id="@+id/swings_img"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/round_image"
                        android:src="@drawable/swings" />

                    <!-- 오른쪽 정보 -->
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="14dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/web_name_2"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="#232323"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/web_intro_2"
                            android:textSize="13sp"
                            android:textColor="#656565"
                            android:layout_marginTop="6dp"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingHorizontal="18dp"
                android:paddingVertical="12dp">

                <!-- 이미지 -->
                <ImageView
                    android:id="@+id/job_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/round_image"
                    android:src="@drawable/swings" />

                <!-- 오른쪽 정보 -->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="14dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/web_name_3"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="#232323"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/web_intro_3"
                        android:textSize="13sp"
                        android:textColor="#656565"
                        android:layout_marginTop="6dp"/>
                </LinearLayout>
            </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <!-- 하단 메뉴바 -->
    <include
        android:id="@+id/bottomNavigation"
        layout="@layout/layout_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
